--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.9.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jquery": "^3.6.1",
     "mysql": "^2.18.1",
+    "plotly.js-dist": "^2.16.3",
     "validator": "^13.7.0"
   },
   "bugs": {
