--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "jquery": "^3.6.1",
     "multer": "^1.4.5-lts.1",
